2002-04-21 Baptiste Lepilleur <gaiacrtn@free.fr>

	* src/DllPlugInTester/makefile.am: removed ld.so from LDADD flags.

	* src/DllPlugInTester/CommandLineParser.h:
	* src/DllPlugInTester/CommandLineParser.cpp: rewrote, fixed problem
	  with double quotes in command line...

	* src/DllPlugInTester/CommandLineParserTest.h:
	* src/DllPlugInTester/CommandLineParserTest.cpp:
	* src/DllPlugInTester/DllPlugInTesterTest.cpp: added, unit tests for
	  CommandLineParser.

	* src/msvc6/TestPlugIn/*: removed.

	* examples/Money/*: added. New 'hello world' example.

	* doc/Money.dox: added. Article that go along with the Money example.

2002-04-21 Baptiste Lepilleur <gaiacrtn@free.fr>

	* THANKS: updated

	* src/cppunit/DynamicLibraryManager.cpp: bugfix: did not pass
	  library name to exception.

	* include/cppunit/TestPath.h:
	* src/cppunit/TestPath.cpp: changed into value object.

	* src/cppunit/BeosDynamicLibraryManager.cpp: integrated patch from
	  Shibu Yoshiki for BeOS ('cuppa' project team).

	* src/DllPlugInTester/CommandLineParser.h:
	* src/DllPlugInTester/CommandLineParser.cpp: added. Command line
	  parsing.

	* src/DllPlugInTester/DllPlugInTester.cpp: full command line support
	  with parameters for plug-ins.

	* src/DllPlugInTester/makefile.am:
	* examples/simple/makefile.am:
	* examples/cppunittest/makefile.am: integrated Jeffrey Morgan patch,
	  Unix side should be working again.

	* examples/ReadMe.txt: added. Brief description of each example.

	* examples/cppunittest/CppUnitTestPlugIn.cpp:
	* examples/cppunittest/CppUnitTestPlugIn.dsp: added. New project to
	  build CppUnit's test suite as a test plug-in.

	* examples/cppunittest/CppUnitTestSuite.cpp: updated. Use new
	  helper macros to create the test suite hierarchy.

	* examples/simple/simple_plugin.opt: added. Contains debug tab
	  settings.

	* examples/ClockerPlugIn/ClockerListener.cpp:
	* examples/ClockerPlugIn/ClockerListener.h:
	* examples/ClockerPlugIn/Timer.cpp:
	* examples/ClockerPlugIn/Timer.h: